# flagsmith

./: .coveragerc  .dockerignore  .dokku-monorepo  .eslintignore  .eslintrc.js  .flake8  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .release-please-manifest.json  AGENTS.md  ATOMIC_PATCH_ISSUE_PLAN.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.arm  Dockerfile.dev  E2E-TEST-FIXES-COMPLETE.md  LICENSE.md  License  Makefile  Pipfile  Procfile  README.md  SECURITY.md  app.json  depot.json  docker-compose.dev.yml  docker-compose.flagd-dev.yml  docker-compose.pgpool.yml  docker-compose.uffizzi.yml  docker-compose.yml  dx-insights-recommentadions.md  flagsmith-v2-reporting-deliverable.md  (+27 more)
api/: .coverage.MacBook-Pro-de-Wadii.local.20848.XSFwpeCx  .coverage.MacBook-Pro-de-Wadii.local.94669.XEjjdNyx  .coverage.Matthews-MacBook-Pro.local.38839.434908  .coverage.Matthews-MacBook-Pro.local.38840.664605  .coverage.Matthews-MacBook-Pro.local.38841.205392  .coverage.Matthews-MacBook-Pro.local.38842.510653  .coverage.Matthews-MacBook-Pro.local.38843.001561  .coverage.Matthews-MacBook-Pro.local.38844.818938  .coverage.Matthews-MacBook-Pro.local.38845.682113  .env-ci  .env-ci-testmon  .env-local  .flake8  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.redhat-ubi  Makefile  Procfile  README.md  conftest.py  dumpdata_mgmt.json  gram.json  ld-openapi-filter.yaml  manage.py  mypy.ini  oauth2_test_server.mjs  openapi-filter-flagsmith-sdk.yml  openapi-filter-grafana.yaml  pyproject.toml  pytest_lazyfixture.py  readme.md  requirements-all.txt  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run
api/.ebextensions/: 00-packages.config  00__packages.config  01__upgrade_pip.config  02__collectstatic.config  02__db_migrate.config  04__wsgi_custom.config  db-migrate.config
api/.elasticbeanstalk/: config.yml
api/api/: apps.py  openapi.py  openapi_views.py  serializers.py  views.py
api/api_keys/: admin.py  apps.py  authentication.py  middleware.py  models.py  serializers.py  user.py  views.py
api/app/: exceptions.py  handlers.py  pagination.py  routers.py  urls.py  utils.py  views.py  wsgi.py
api/app_analytics/: __init__.py  analytics_db_service.py  apps.py  cache.py  constants.py  dataclasses.py  experiments.py  influxdb_schema.py  influxdb_wrapper.py  mappers.py  middleware.py  migrate_to_pg.py  models.py  permissions.py  query.py  schemas.py  serializers.py  services.py  tasks.py  throttles.py  track.py  types.py  views.py
api/audit/: __init__.py  apps.py  audit_helpers.py  constants.py  decorators.py  models.py  permissions.py  related_object_type.py  serializers.py  services.py  signals.py  tasks.py  types.py  urls.py  views.py
api/benchmarks/: .gitignore  asv.conf.json  benchmarks.py  helpers.py
api/buckets/: __init__.py  apps.py  models.py  permissions.py  serializers.py  views.py
api/clickhouse/: apps.py
api/core/: apps.py  constants.py  dataclasses.py  db.py  db_context.py  db_context_manager.py  exceptions.py  health.py  helpers.py  migration_helpers.py  models.py  permissions.py  redis_cluster.py  request_origin.py  signals.py  signing.py  throttling.py  workflows_services.py
api/custom_auth/: admin.py  apps.py  constants.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
api/docker/: docker
api/e2etests/: e2e_seed_data.py  middleware.py  permissions.py  urls.py  views.py
api/edge_api/: apps.py  utils.py
api/environments/: __init__.py  admin.py  api_keys.py  apps.py  authentication.py  constants.py  enums.py  exceptions.py  managers.py  mappers.py  metrics.py  models.py  serializers.py  tasks.py  urls.py  views.py
api/experimentation/: apps.py  constants.py  dataclasses.py  experiment_urls.py  ingestion_sync_service.py  mappers.py  metric_definitions.py  metric_urls.py  metrics.py  models.py  permissions.py  serializers.py  services.py  stats.py  tasks.py  types.py  urls.py  views.py
api/external_resource/: models.py  serializers.py  urls.py  views.py
api/external_resources/: __init__.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
api/features/: __init__.py  admin.py  apps.py  audit_helpers.py  constants.py  custom_lifecycle.py  dataclasses.py  exceptions.py  feature_types.py  features_service.py  helpers.py  managers.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  value_types.py  views.py
api/flagsmith_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
api/import_export/: export.py  import_.py  json_serializers_with_metadata_support.py  utils.py
api/integrations/: __init__.py  integration.py
api/mappers/: __init__.py  dynamodb.py  engine.py
api/metadata/: apps.py  base_views.py  fields.py  mixins.py  models.py  permissions.py  serializers.py  types.py  urls.py  views.py
api/metrics/: apps.py  constants.py  metrics_service.py  serializers.py  types.py  views.py  worker_metrics.py
api/oauth2_metadata/: apps.py  authentication.py  dataclasses.py  serializers.py  services.py  tasks.py  views.py
api/observability/: otel.py
api/onboarding/: apps.py  serializers.py  tasks.py  throttling.py  urls.py  views.py
api/organisations/: admin.py  alerts.py  apps.py  chargebee.py  constants.py  exceptions.py  fields.py  managers.py  models.py  permissions.py  serializers.py  signals.py  subscription_info_cache.py  task_helpers.py  tasks.py  urls.py  utils.py  views.py
api/permissions/: LICENSE.md  models.py  permission_service.py  permissions_calculator.py  rbac_wrapper.py  serializers.py
api/platform_hub/: apps.py  constants.py  mappers.py  serializers.py  services.py  types.py  urls.py  views.py
api/projects/: admin.py  apps.py  exceptions.py  managers.py  models.py  permissions.py  permissions_calculator.py  serializers.py  services.py  tasks.py  urls.py  views.py
api/realtime/: __init__.py  service.py
api/sales_dashboard/: apps.py  (+3 more)
mcp/: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
(+5322 files in other folders)
