[project]
name = "flagsmith-mcp"
version = "0.1.0"
description = "An MCP server connecting to the Flagsmith API."
authors = [{ name = "Flagsmith", email = "support@flagsmith.com" }]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastmcp>=3.3.1,<4.0.0",  # Base MCP functionality
]

[dependency-groups]
dev = [
    "mypy>=2.1.0,<3.0.0",  # Static type checking
    "openapi-pydantic>=0.5.0,<1.0.0",  # Build OpenAPI specs as fixtures
    "pytest>=9.0.3,<10.0.0",  # Run tests
    "pytest-asyncio>=1.3.0,<2.0.0",  # Run asynchronous tests
    "pytest-httpx>=0.35.0,<1.0.0",  # Mock HTTP interactions
    "ruff>=0.15.12,<0.16.0",  # Lint and format
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
# Establish parity with flake8 + isort
select = ["C901", "E4", "E7", "E9", "F", "I", "W"]

[tool.mypy]
strict = true
show_absolute_path = true
