[project]
name = "flagsmith-mcp"
version = "0.1.0"
description = "An MCP server connecting to the Flagsmith API."
authors = [{ name = "Flagsmith", email = "support@flagsmith.com" }]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastmcp>=3.3.1,<4.0.0",  # Base MCP functionality
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "openapi-pydantic>=0.5.0,<1.0.0",  # Build OpenAPI specs as fixtures
    "pytest-asyncio>=1.3.0,<2.0.0",  # Run asynchronous tests
    "pytest-httpx>=0.35.0,<1.0.0",  # Mock HTTP interactions
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
