[project]
name = "flagsmith-mcp"
version = "0.1.0"
description = "An MCP server connecting to the Flagsmith API."
authors = [{ name = "Flagsmith", email = "support@flagsmith.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.3.1,<4.0.0",            # Base MCP functionality
    "prometheus-client>=0.21.0,<1.0.0", # Export Prometheus metrics
    "pydantic-settings>=2.0.0,<3.0.0",  # Environment-driven configuration
]

[project.scripts]
flagsmith-mcp = "flagsmith_mcp.server:run"

[dependency-groups]
dev = [
    "flagsmith-common[test-tools]>=3.9.1,<4.0.0", # Shared test fixtures
    "mypy>=2.1.0,<3.0.0",                         # Static type checking
    "openapi-pydantic>=0.5.0,<1.0.0",             # Build OpenAPI specs as fixtures
    "pytest>=9.0.3,<10.0.0",                      # Run tests
    "pytest-asyncio>=1.3.0,<2.0.0",               # Run asynchronous tests
    "pytest-cov>=7.0.0,<8.0.0",                   # Measure test coverage
    "respx>=0.22,<1.0",                           # Mock HTTP interactions
    "ruff>=0.15.12,<0.16.0",                      # Lint and format
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=flagsmith_mcp --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
branch = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Establish parity with flake8 + isort
select = ["C901", "E4", "E7", "E9", "F", "I", "W"]

[tool.mypy]
strict = true
show_absolute_path = true
